changed microsite to list fixed collapse MJ-394

--- a/static/my.jobs.css
+++ b/static/my.jobs.css
@@ -87,15 +87,15 @@ table#row-link-table {
 }
 
 .link-list {     
-    list-style-type: none;
-    background-color: rgb(250, 250, 250);
+    list-style-type: none;    
     margin: 0;
-    padding: 0;
+    padding: 0;    
 }
 .link-list li {
     display: block;
-    border-bottom: 1px solid #eae6de;
-    padding: 4px;    
+    background-color: rgb(250, 250, 250);
+    border: 1px solid #eae6de;
+    padding: 5px;      
 }
 .move-left {
     margin-left: -45px;
